@@ -19,6 +19,7 @@ enum StreamState
 	SS_INITIALIZE,
 	SS_FEATURES,
 	SS_ONLINE,
+	SS_DISCONNECTING,
 	SS_ERROR
 };
 
